...
          headerRight: () => <RulesHeaderButton />,
        }}
      />
      <Stack.Screen name="private/join" options={{ title: 'Join Private Game' }} />
      <Stack.Screen name="public/create" options={{ title: 'Create Public Game' }} />
      <Stack.Screen name="public/join" options={{ title: 'Join Public Game' }} />
      <Stack.Screen name="private/confirm" options={{ title: 'Game Created', headerLeft: () => <HomeBackButton dismissAll /> }} />
      <Stack.Screen name="rules" options={{ title: 'Game Rules' }} />
      <Stack.Screen name="account/index" options={{ title: 'Account' }} />
      <Stack.Screen name="account/history" options={{ title: 'Game History' }} />
      <Stack.Screen name="account/statistics" options={{ title: 'Player Statistics' }} />
      <Stack.Screen name="account/settings" options={{ title: 'Account Settings' }} />
      <Stack.Screen name="game/[gameId]" options={{ title: 'Game Details' }} />
...
